adding modified files

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -16,25 +17,37 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
+          <li>HTML head elements contain information about webpage</li>
+          <li>HTML used top create structure of webpage</li>
+          <li>HTML elements are usually composed of an opening and closing tag</li>
+          <li>HTML elements are case sensitive</li>
+          <li>HTML attribute defines information about our element</li>
         </ul>
       </section>
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Using CSS we can create styles to our webpage</li>
+          <li>External style sheets are the most copmmonly used CSS method</li>
+          <li>CSS rule consist of selector, proprty and value</li>
+          <li>Margin indicate the space we want outside of an element</li>
+          <li>Padding adds space around the content inside an element</li>
+         <li> Do not repeat yourself code helps to add elements of same styling grouped together</li>
         </ul>
       </section>
       <section class="card" id="git-section">
         <h2>GIT</h2>
         <ul>
-          <li>Enter your GIT notes here</li>
+          <li>Git status helps to identify in which directory or branch we are currently in</li>
+          <li>Git add -A adds modifications to the staging area</li>
+          <li>Git pull helps to check our local brach is in sync with the base branch</li>
+          <li>Git push adds new changes to the main branch</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter ypur javascript notes here</li>
+          <li>Enter your javascript notes here</li>
         </ul>
       </section>
  </main>
