--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -48,7 +48,12 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Array is a single variable that is used to hold a group pf data</li>
+          <li>Dataitem in the array is identified by its index</li>
+          <li>A function is a set of instruction that tells computer how to perform a task</li>
+          <li>We can execute a function by calling a function</li>
         </ul>
       </section>
  </main>
@@ -56,6 +61,7 @@
     <footer> 
     <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/script1.js"></script>
+
   </body>
 </html>
